--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,4 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-
-# Dependency directories
 node_modules/
-
-# dotenv environment variables file
 .env
-
-
-
+yarn.lock
+package-lock.json
