--- a/server/package.json
+++ b/server/package.json
@@ -1,21 +1,25 @@
 {
   "dependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.6",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.2",
-    "@types/express-session": "^1.15.16",
+    "@types/jwt-simple": "^0.5.33",
     "@types/knex": "^0.16.1",
-    "@types/node": "^12.12.18",
+    "@types/node": "^13.1.1",
     "@types/passport": "^1.0.2",
-    "@types/passport-local": "^1.0.33",
+    "@types/passport-jwt": "^3.0.3",
+    "@types/pg": "^7.14.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-session": "^1.17.0",
-    "knex": "^0.20.4",
+    "jwt-simple": "^0.5.6",
+    "knex": "^0.20.6",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0",
+    "passport-jwt": "^4.0.0",
+    "pg": "^7.17.0",
     "ts-node": "^8.5.4",
-    "typescript": "^3.7.3"
+    "typescript": "^3.7.4"
   }
 }
