--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "@types/jest": "^24.0.0",
     "@types/node": "^13.1.1",
     "@types/react": "^16.9.0",
+    "@types/react-bootstrap": "^0.32.20",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.3",
@@ -21,6 +22,7 @@
     "connected-react-router": "^6.6.1",
     "dotenv": "^8.2.0",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
