--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.3",
     "@types/redux-thunk": "^2.1.0",
+    "blockly": "^3.20191014.4",
     "bootstrap": "^4.4.1",
     "connected-react-router": "^6.6.1",
     "dotenv": "^8.2.0",
