--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^13.1.1",
     "@types/react": "^16.9.0",
     "@types/react-bootstrap": "^0.32.20",
+    "@types/react-countup": "^4.0.1",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.3",
@@ -24,6 +25,7 @@
     "dotenv": "^8.2.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-countup": "^4.3.2",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
