--- a/app/package.json
+++ b/app/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-regular-svg-icons": "^5.12.0",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-fontawesome": "^0.1.8",
     "@testing-library/jest-dom": "^4.2.4",
@@ -16,6 +17,7 @@
     "@types/react-bootstrap": "^0.32.20",
     "@types/react-countup": "^4.0.1",
     "@types/react-dom": "^16.9.0",
+    "@types/react-image-crop": "^8.1.2",
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.3",
     "@types/redux-thunk": "^2.1.0",
@@ -27,6 +29,7 @@
     "react-bootstrap": "^1.0.0-beta.16",
     "react-countup": "^4.3.2",
     "react-dom": "^16.12.0",
+    "react-image-crop": "^8.5.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
