--- a/app/package.json
+++ b/app/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^8.2.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-bootstrap-table-next": "^3.3.3",
     "react-countup": "^4.3.2",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
