--- a/app/package.json
+++ b/app/package.json
@@ -13,10 +13,12 @@
     "@types/dotenv": "^8.2.0",
     "@types/jest": "^24.0.0",
     "@types/node": "^13.1.1",
+    "@types/node-fetch": "^2.5.4",
     "@types/react": "^16.9.0",
     "@types/react-bootstrap": "^0.32.20",
     "@types/react-countup": "^4.0.1",
     "@types/react-dom": "^16.9.0",
+    "@types/react-facebook-login": "^4.1.1",
     "@types/react-image-crop": "^8.1.2",
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.3",
@@ -25,11 +27,13 @@
     "bootstrap": "^4.4.1",
     "connected-react-router": "^6.6.1",
     "dotenv": "^8.2.0",
+    "node-fetch": "^2.6.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-bootstrap-table-next": "^3.3.3",
     "react-countup": "^4.3.2",
     "react-dom": "^16.12.0",
+    "react-facebook-login": "^4.1.1",
     "react-image-crop": "^8.5.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
