--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "@types/mongodb": "^3.3.14",
     "@types/multer": "^1.3.10",
     "@types/node": "^13.1.1",
+    "@types/node-fetch": "^2.5.4",
     "@types/passport": "^1.0.2",
     "@types/passport-jwt": "^3.0.3",
     "@types/pg": "^7.14.1",
@@ -20,6 +21,7 @@
     "knex": "^0.20.6",
     "mongodb": "^3.4.1",
     "multer": "^1.4.2",
+    "node-fetch": "^2.6.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "pg": "^7.17.0",
