--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@types/aws-sdk": "^2.7.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.6",
     "@types/dotenv": "^8.2.0",
@@ -8,11 +9,13 @@
     "@types/knex": "^0.16.1",
     "@types/mongodb": "^3.3.14",
     "@types/multer": "^1.3.10",
+    "@types/multer-s3": "^2.7.7",
     "@types/node": "^13.1.1",
     "@types/node-fetch": "^2.5.4",
     "@types/passport": "^1.0.2",
     "@types/passport-jwt": "^3.0.3",
     "@types/pg": "^7.14.1",
+    "aws-sdk": "^2.607.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -21,6 +24,7 @@
     "knex": "^0.20.6",
     "mongodb": "^3.4.1",
     "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "node-fetch": "^2.6.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
