--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ variables:
   POSTGRES_DB: project3
   POSTGRES_USER: postgres
   POSTGRES_PASSWORD: postgres
-  POSTGRES_HOST: postgres
+  POSTGRES_HOST: localhost
 
 before_script:
   - npm install -g yarn
