--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
     "@types/cors": "^2.8.6",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.2",
+    "@types/jest": "^24.9.0",
     "@types/jwt-simple": "^0.5.33",
     "@types/knex": "^0.16.1",
     "@types/mongodb": "^3.3.14",
@@ -20,6 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jest": "^25.1.0",
     "jwt-simple": "^0.5.6",
     "knex": "^0.20.6",
     "mongodb": "^3.4.1",
@@ -29,6 +31,7 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "pg": "^7.17.0",
+    "ts-jest": "^24.3.0",
     "ts-node": "^8.5.4",
     "typescript": "^3.7.4"
   }
